新增sms project API
