# server/model/txyun/sms/sms_template.go
@@ -2,6 +2,7 @@ package sms
 
 import (
 	"github.com/defeng-hub/ByOfficeAutomatic/server/global"
+	"strings"
 )
 
 // SmsTemplate Sms模板表
@@ -20,16 +21,42 @@ func (SmsTemplate) TableName() string {
 	return "txyun_sms_template"
 }
 
+func (e SmsTemplate) GetParamsNum() int {
+	ls := e.TemplateContent
+	if strings.Index(ls, "{1}") == -1 {
+		return 0
+	} else if strings.Index(ls, "{2}") == -1 {
+		return 1
+	} else if strings.Index(ls, "{3}") == -1 {
+		return 2
+	} else if strings.Index(ls, "{4}") == -1 {
+		return 3
+	} else if strings.Index(ls, "{5}") == -1 {
+		return 4
+	} else if strings.Index(ls, "{6}") == -1 {
+		return 5
+	} else if strings.Index(ls, "{7}") == -1 {
+		return 6
+	} else if strings.Index(ls, "{8}") == -1 {
+		return 7
+	} else if strings.Index(ls, "{9}") == -1 {
+		return 8
+	} else {
+		return 9
+	}
+}
+
 // SmsProject SMS项目
 type SmsProject struct {
 	global.GVA_MODEL
-	ProjectName string      `json:"project_name,omitempty" gorm:"comment:项目名"`
-	Comment     string      `json:"comment,omitempty" gorm:"comment:备注"`
-	TemplateId  uint        `json:"template_id,omitempty" gorm:"comment:模板ID"`
-	SmsTemplate SmsTemplate `json:"sms_template" gorm:"foreignKey:TemplateId"`
-	RunNum      int         `json:"run_num,omitempty" gorm:"comment:运行次数"`
-	RowNum      int         `json:"row_num,omitempty" gorm:"comment:条数"`
-	ParamNum    int         `json:"param_num,omitempty" gorm:"comment:参数个数"`
+	ProjectName string `json:"project_name" gorm:"comment:项目名"`
+	Comment     string `json:"comment" gorm:"comment:备注"`
+	TemplateId  int64  `json:"template_id" gorm:"comment:模板ID"`
+	// references 是关联到外表的键
+	SmsTemplate SmsTemplate `json:"sms_template" gorm:"foreignKey:TemplateId;references:TemplateId;"`
+	RunNum      int         `json:"run_num" gorm:"comment:运行次数"`
+	RowNum      int         `json:"row_num" gorm:"comment:条数"`
+	ParamNum    int         `json:"param_num" gorm:"comment:参数个数"`
 }
 
 func (SmsProject) TableName() string {
